testdata/parser/negative/10.pdl
#version 100

// sync block nested in sync block
primitive main(in a, out b) {
	while (true) {
		synchronous {
			if (false || true) {
				synchronous {
					skip;
				}
			}
		}
	} 
}
